Support jump-host style ssh connections to overcloud
Ansible will ssh to the overcloud nodes proxied via the undercloud node

--- a/osp7_installer/ansible/overcloud-redeploy.yml
+++ b/osp7_installer/ansible/overcloud-redeploy.yml
@@ -3,12 +3,5 @@
   connection: ssh
   roles:
     - delete-overcloud
-    - add-test-gateway-ip
-    - osp-overcloud
-    - osp-overcloud-post
-    - add-overcloud-host
-    - osp-test-data
-    - read-overcloudrc-props
-    - rh-tempest
-    - scale-patch
-    - report_status
+
+- include: overcloud-deploy.yml
