--- a/osp7_installer/ansible/osp-director.yml
+++ b/osp7_installer/ansible/osp-director.yml
@@ -1,25 +1,3 @@
 ---
-- hosts: "{{ director_node_ssh_ip }}"
-  connection: ssh
-  roles:
-    - disable-lab-pxe
-    - etc-hosts
-    - osp-director
-    - nfs-shares
-    - geerlingguy.nfs
-    - osp-prep-for-overcloud
-    - add-test-gateway-ip
-    - osp-overcloud
-    - osp-overcloud-post
-    - add-overcloud-host
-    - osp-test-data
-    - read-overcloudrc-props
-    - rh-tempest
-    - scale-patch
-    - report_status
-
-#- hosts: overcloud_controller
-#  remote_user: root
-#  roles:
-#  - add-test-gateway-ip
-#  - rh-tempest
+- include: undercloud.yml
+- include: overcloud-deploy.yml
