Adding Carols fix for LP bug - 1551827

--- a/osp7_installer/conf_common/osp8.conf
+++ b/osp7_installer/conf_common/osp8.conf
@@ -18,3 +18,11 @@ disk_images = [
                 { 'url': '%(image_base_url)s/ironic-python-agent.tar', 'name': 'ironic-python-agent.tar' },
                 { 'url': '%(image_base_url)s/overcloud-full.tar', 'name': 'overcloud-full.tar' }
               ]
+
+patch_infos = [
+                {
+                  'name': 'networking-cisco',
+                  'path': '/usr/lib/python2.7/site-packages/networking_cisco',
+                  'ref': 'refs/changes/68/286768/1'
+                },
+              ]
