--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -211,16 +211,30 @@ rhel_username = dummy_user
 rhel_password = dummy_pass
 rhel_pool = dummy_pool
 
-tempest_dir = /home/stack/cisco-tempest
 local_report_dir = ../../target/
 
 logstash_dir = /opt/logstash/
-#sjc_apl_gerrit3_user =
-#sjc_apl_gerrit3_private_key =
+
+# Testing part
+#
+# Repo to checkout Tempest to
+tempest_dir = /home/stack/cisco-tempest
+# Username/Password to checkout Rich's and Deepika's tests from sjc-apl-gerrit3.cisco.com
+# sjc_apl_gerrit3_user =
+# sjc_apl_gerrit3_http_password =
+#
+# Tests to execute or configure environment to execute tests if test_list_file_url is defined
+# Currently supports following keywords: vlan, vxlan, ucsm, port_security
+# test_names =
+#
+# Link to the test list which would be provided to testr with argument --load-list
+# test_list_file_url =
+#
+# Upload test results to Elastic search host
+# elasticsearch_host =
+# elasticsearch_index =
 
 #ha_tenant_kill_orphans = True
-elasticsearch_host = "172.29.173.236:9200"
-elasticsearch_index = "test"
 
 resume_guests_state_on_host_boot = true
 
