Adding patches to OSP8 disk image

--- a/osp7_installer/ansible/roles/osp-overcloud-image/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-overcloud-image/tasks/main.yml
@@ -46,11 +46,17 @@
 - name: Install libguestfs-tools
   yum: name=libguestfs-tools
 
-- name: Copy image patch files
+- name: Copy image patch files (OSP7)
   template: src={{ item.template_file }} dest=/home/stack/images/{{ item.template_file }} owner=stack group=stack mode=0755
   with_items:
     - { template_file: 'ml2_mech_driver_debug.patch' }
   when: osp_version == 7
+
+- name: Copy image patch files (OSP8)
+  template: src={{ item.template_file }} dest=/home/stack/images/{{ item.template_file }} owner=stack group=stack mode=0755
+  with_items:
+    - { template_file: 'uscm_config_parse_fix.patch' }
+  when: osp_version == 8
 
 #- name: Build images
 #  sudo_user: stack
