--- a/osp7_installer/ansible/roles/osp-test-data/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-test-data/tasks/main.yml
@@ -67,7 +67,7 @@
 - name: Download Cirros image
   sudo_user: stack
   get_url:
-      url: http://download.cirros-cloud.net/0.3.4/cirros-0.3.4-x86_64-disk.img
+      url: http://memory.cisco.com/osp/cirros_images/cirros-0.3.4-x86_64-disk.img
       dest: /home/stack/cirros-0.3.4-x86_64-disk.img
   register: cirros_image_downloaded
 
