--- a/osp7_installer/conf_common/osp8.conf
+++ b/osp7_installer/conf_common/osp8.conf
@@ -25,4 +25,14 @@ patch_infos = [
                   'path': '/usr/lib/python2.7/site-packages/networking_cisco',
                   'ref': 'refs/changes/68/286768/1'
                 },
+                {
+                  'name': 'networking-cisco',
+                  'path': '/usr/lib/python2.7/site-packages/networking_cisco',
+                  'ref': 'refs/changes/32/280432/7'
+                },
+                {
+                  'name': 'networking-cisco',
+                  'path': '/usr/lib/python2.7/site-packages/',
+                  'patchfile': 'uscm_config_parse_fix.patch',
+                },
               ]
