--- a/osp7_installer/conf_common/osp8.conf
+++ b/osp7_installer/conf_common/osp8.conf
@@ -33,6 +33,6 @@ patch_infos = [
                 {
                   'name': 'networking-cisco',
                   'path': '/usr/lib/python2.7/site-packages/',
-                  'patchfile': 'uscm_config_parse_fix.patch',
+                  'patchfile': 'ucsm_config_parse_fix.patch',
                 },
               ]
