adding osp8 patches back in for networkgin-cisco

--- a/osp7_installer/conf_common/osp8.conf
+++ b/osp7_installer/conf_common/osp8.conf
@@ -17,4 +17,19 @@ disk_images = [
               ]
 
 patch_infos = [
+                {
+                  'name': 'networking-cisco',
+                  'path': '/usr/lib/python2.7/site-packages/networking_cisco',
+                  'ref': 'refs/changes/68/286768/1'
+                },
+                {
+                  'name': 'networking-cisco',
+                  'path': '/usr/lib/python2.7/site-packages/networking_cisco',
+                  'ref': 'refs/changes/32/280432/7'
+                },
+                {
+                  'name': 'networking-cisco',
+                  'path': '/usr/lib/python2.7/site-packages/',
+                  'patchfile': 'ucsm_config_parse_fix.patch',
+                },
               ]
