--- a/osp7_installer/conf_common/osp8.conf
+++ b/osp7_installer/conf_common/osp8.conf
@@ -3,6 +3,9 @@ osp_version = 8
 
 mirror_base_url = http://memory.cisco.com/osp/osp8/RH7-RHOS-8.0-2016-03-22.1
 
+# OSP8 does not contain the correct lxml version (fixed in next release)
+rpms_for_image = "http://memory.cisco.com/osp/osp8/cisco-rpms/python-networking-cisco-2.0.0-3.el7ost.noarch.rpm"
+
 yum_repos = [
               { 'name': 'RH7-RHOS-8.0-director.repo',          'url': '%(mirror_base_url)s/rhelosp-8.0-director-puddle.repo' },
               { 'name': 'RH7-RHOS-8.0.repo',                   'url': '%(mirror_base_url)s/rhelosp-8.0-puddle.repo' },
@@ -17,19 +20,4 @@ disk_images = [
               ]
 
 patch_infos = [
-                {
-                  'name': 'networking-cisco',
-                  'path': '/usr/lib/python2.7/site-packages/networking_cisco',
-                  'ref': 'refs/changes/68/286768/1'
-                },
-                {
-                  'name': 'networking-cisco',
-                  'path': '/usr/lib/python2.7/site-packages/networking_cisco',
-                  'ref': 'refs/changes/32/280432/7'
-                },
-                {
-                  'name': 'networking-cisco',
-                  'path': '/usr/lib/python2.7/site-packages/',
-                  'patchfile': 'ucsm_config_parse_fix.patch',
-                },
               ]
