the default 'nova' network name has changed to 'public' in osp8 removing the setting of api_workers/rpc_workers, so they do NOT cause a problem with the nexus driver

--- a/osp7_installer/ansible/roles/osp-overcloud/templates/networking-cisco-environment.yaml
+++ b/osp7_installer/ansible/roles/osp-overcloud/templates/networking-cisco-environment.yaml
@@ -56,7 +56,7 @@ parameter_defaults:
 
 parameters:
   Debug: "{{ overcloud_debug }}"
-  controllerExtraConfig:
-    neutron::server::api_workers: 0
-    neutron::agents::metadata::metadata_workers: 0
-    neutron::server::rpc_workers: 0
+#  controllerExtraConfig:
+#    neutron::server::api_workers: 0
+#    neutron::agents::metadata::metadata_workers: 0
+#    neutron::server::rpc_workers: 0
