--- a/osp7_installer/conf_common/osp7.conf
+++ b/osp7_installer/conf_common/osp7.conf
@@ -1,5 +1,6 @@
 [DEFAULT]
 osp_version = 7
+nova_default_floating_pool = nova
 
 yum_repos = [
               { 'name': 'rhel-7-server-openstack-7.0-director-rpms.repo', 'url': 'http://memory.cisco.com/osp7/rpms/rh/OSP7.2-ga/rhel-7-server-openstack-7.0-director-rpms.repo' },
