--- a/osp7_installer/conf_common/osp8.conf
+++ b/osp7_installer/conf_common/osp8.conf
@@ -1,5 +1,6 @@
 [DEFAULT]
 osp_version = 8
+nova_default_floating_pool = public
 
 mirror_base_url = http://memory.cisco.com/osp/osp8/RH7-RHOS-8.0-2016-03-22.1
 
