--- a/osp7_installer/ansible/roles/osp-overcloud-post/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-overcloud-post/tasks/main.yml
@@ -1,39 +1,39 @@
 
 # Create external network
-- name: Create net nova (ext-net)
+- name: Create net nova/public (ext-net)
   sudo_user: stack
   shell: >
         source /home/stack/overcloudrc &&
         neutron net-list |
-        grep -q nova ||
-        neutron net-create nova
+        grep -q {{ nova_default_floating_pool }} ||
+        neutron net-create {{ nova_default_floating_pool }}
         --router:external=True
         --provider:physical_network 'datacentre'
         --provider:network_type flat
   when: not create_ext_net_vlan_provider
 
-- name: Create nova (ext-net) on vlan provider
+- name: Create nova/publc (ext-net) on vlan provider
   sudo_user: stack
   shell: >
         source /home/stack/overcloudrc &&
         neutron net-list |
-        grep -q nova ||
-        neutron net-create nova
+        grep -q {{ nova_default_floating_pool }} ||
+        neutron net-create {{ nova_default_floating_pool }}
         --router:external=True
         --provider:physical_network {{ 'datacentre' if neutron_external_bridge == neutron_tenant_bridge else 'external' }}
         --provider:network_type vlan
         --provider:segmentation_id {{ neutron_external_vlan }}
   when: create_ext_net_vlan_provider
 
-- name: Create subnet nova (ext-subnet)
+- name: Create subnet nova/public (ext-subnet)
   sudo_user: stack
   shell: >
         source /home/stack/overcloudrc &&
         neutron subnet-list |
-        grep -q nova ||
+        grep -q {{ nova_default_floating_pool }} ||
         neutron subnet-create
-        --name nova
+        --name {{ nova_default_floating_pool }}
         --disable-dhcp
         --allocation-pool start={{ overcloud_floating_ip_start }},end={{ overcloud_floating_ip_end }}
         --gateway={{ overcloud_floating_ip_network_gateway }}
-        nova {{ overcloud_floating_ip_cidr }}
+        {{ nova_default_floating_pool }} {{ overcloud_floating_ip_cidr }}
