--- a/osp7_installer/ansible/roles/osp-test-data/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-test-data/tasks/main.yml
@@ -49,7 +49,7 @@
         grep -q test-router ||
         (neutron --os-tenant-name test-project --os-username test-user --os-password password router-create test-router &&
         neutron --os-tenant-name test-project --os-username test-user --os-password password router-interface-add test-router test-subnet &&
-        neutron --os-tenant-name test-project --os-username test-user --os-password password router-gateway-set test-router nova)
+        neutron --os-tenant-name test-project --os-username test-user --os-password password router-gateway-set test-router {{ nova_default_floating_pool }})
 
 - name: Upload test-user pub key
   sudo_user: stack
