Updating to latest osp8 build

--- a/osp7_installer/conf_common/osp8.conf
+++ b/osp7_installer/conf_common/osp8.conf
@@ -2,10 +2,10 @@
 osp_version = 8
 nova_default_floating_pool = public
 
-mirror_base_url = http://memory.cisco.com/osp/osp8/RH7-RHOS-8.0-2016-03-22.1
+mirror_base_url = http://memory.cisco.com/osp/osp8/RH7-RHOS-8.0-2016-03-29.3
 
 # OSP8 does not contain the correct lxml version (fixed in next release)
-rpms_for_image = "http://memory.cisco.com/osp/osp8/cisco-rpms/python-networking-cisco-2.0.0-3.el7ost.noarch.rpm"
+;rpms_for_image = "http://memory.cisco.com/osp/osp8/cisco-rpms/python-networking-cisco-2.0.0-3.el7ost.noarch.rpm"
 
 yum_repos = [
               { 'name': 'RH7-RHOS-8.0-director.repo',          'url': '%(mirror_base_url)s/rhelosp-8.0-director-puddle.repo' },
