Allow for configuring of trunk allow in switch_con_step disable ipv6 tempest tests

--- a/osp7_installer/ansible/roles/rh-os-cert/tasks/main.yml
+++ b/osp7_installer/ansible/roles/rh-os-cert/tasks/main.yml
@@ -43,8 +43,9 @@
         identity.admin_domain_name Default
         auth.allow_tenant_isolation True
         auth.tempest_roles _member_
-        network.ipv6 true
-        network.ipv6_subnet_attributes true
+        network-feature-enabled.ipv6_subnet_attributes false
+        network.ipv6_subnet_attributes false
+        network.ipv6 false
         compute-feature-enabled.live_migration false
         identity.admin_username admin
         identity.admin_password {{ hostvars[director_node_ssh_ip]['overcloud_os_admin_password'] }}
