--- a/osp7_installer/ansible/roles/rh-os-cert/tasks/main.yml
+++ b/osp7_installer/ansible/roles/rh-os-cert/tasks/main.yml
@@ -44,9 +44,9 @@
         auth.allow_tenant_isolation True
         auth.tempest_roles _member_
         network-feature-enabled.ipv6_subnet_attributes false
-        network.ipv6_subnet_attributes false
-        network.ipv6 false
-        compute-feature-enabled.live_migration false
+        network.ipv6_subnet_attributes true
+        network.ipv6 true
+        compute-feature-enabled.live_migration true
         identity.admin_username admin
         identity.admin_password {{ hostvars[director_node_ssh_ip]['overcloud_os_admin_password'] }}
         --out /etc/redhat-certification-openstack/tempest.conf
