Adapt SRIOV change for OSP8.  requires do_sriov=True to enable

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -5,6 +5,9 @@ xrut_dir = /opt/ws
 type_driver =  vxlan,vlan,flat,gre
 network_type = vlan
 
+do_sriov = false
+ucsm_support_pci_devs = "['1137: 0071', '8086:10ed']"
+
 skip = False
 ignore_errors = false
 
