correcting a couple minor merge issues when also supporting osp7

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -203,6 +203,9 @@ sw_1 = ""
 sw_2 = ""
 sw_1_name = ""
 sw_2_name = ""
+switch_tempest_section = [
+    {}, {}
+    ]
 
 #example step, used for printing vars
 [example]
