--- a/osp7_installer/ansible/roles/osp-overcloud/templates/networking-cisco-environment.yaml
+++ b/osp7_installer/ansible/roles/osp-overcloud/templates/networking-cisco-environment.yaml
@@ -60,7 +60,7 @@ parameter_defaults:
 {% if do_sriov %}
   NovaComputeExtraConfig:
     nova::compute::pci_passthrough: >
-      '[{"product_id":"0071", "address":"*:07:00.*", "vendor_id":"1137","physical_network": "{{ network_nexus_managed_physical_network }}" }]'
+      '[{"product_id":"0071", "address":"*:07:*", "vendor_id":"1137","physical_network": "{{ network_nexus_managed_physical_network }}" }]'
 {% endif %}
 
 parameters:
